Modernize the server internals without touching the wire
Split the lifetime counters out of EmailParseServiceImpl into a
ParseMetrics class that also owns the stdout line format, so the
service counts and the launcher only schedules the report. The line
itself is byte-identical to what the README documents.

Buffer inbound chunks by writing the ByteString straight into the
accumulator instead of copying to an intermediate array first, saving
one full copy per chunk on the hot path.

Read the Jakarta Mail manifest version once at class load rather than
on every GetServiceInfo call, use Thread.ofPlatform for the metrics
thread, and prefer List.getFirst in MsgParser.

No behavior change: same events, same status codes, same strings on
the wire, all 70 tests pass unchanged.